--- a/.vscode/docstring_template.mustache
+++ b/.vscode/docstring_template.mustache
@@ -5,7 +5,7 @@ Args:
     {{var}} ({{typePlaceholder}}): {{descriptionPlaceholder}}
 {{/args}}
 {{#kwargs}}                       
-    {{var}} ({{typePlaceholder}}, optional): {{descriptionPlaceholder}}. Default to {{&default}}
+    {{var}} ({{typePlaceholder}}, optional): {{descriptionPlaceholder}}. Defaults to {{&default}}
 {{/kwargs}}
     **kw (dict, optional): Arbitrary keyword arguments for secondary parameters.
 
