docs: improve documentation structure and its generation

--- a/.vscode/docstring_template.mustache
+++ b/.vscode/docstring_template.mustache
@@ -1,14 +1,14 @@
 {{summaryPlaceholder}}
 
-Args:
+{{#argsExist}}Args:
 {{#args}}
     {{var}} ({{typePlaceholder}}): {{descriptionPlaceholder}}
-{{/args}}
-{{#kwargs}}                       
+{{/args}}{{/argsExist}}
+{{#kwargsExist}}{{#kwargs}}                       
     {{var}} ({{typePlaceholder}}, optional): {{descriptionPlaceholder}}. Defaults to {{&default}}
 {{/kwargs}}
     **kw (dict, optional): Arbitrary keyword arguments for secondary parameters.
-
+{{/kwargsExist}}
 Keyword Args:                   
     **_var_ (_type_, optional)            
         _description_      
